.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Test_Case__c.object
<CustomObject>
    <description>Test Cases for Change Requests</description>
    <fields>
        <fullName>xcdhcm__Change_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>xcdhcm__Change_Request__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Expected_results__c</fullName>
        <label>Expected results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_details__c</fullName>
        <label>Test details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Case</label>
    <nameField>
        <label>Test case</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>